Fixed weird alignment

--- a/css/index.css
+++ b/css/index.css
@@ -11,8 +11,7 @@ body {
 /* Navigation Bar */
 
 .row {
-	padding-left: 0 !important;
-   	margin-left: 0 !important;
+	
 	margin-top:16%;
 	background-color: transparent;
 	text-align: center; 
